# demo

./: .actrc  .gitignore  .gitmessage  .secrets.example  .vars.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SETUP_GUIDE.md  pyproject.toml
.github/: dependabot.yml
.github/actions/quality-checks/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: auto-format.yml  cache-demo.yml  ci-caller-example.yml  ci-reusable.yml  ci.yml  ci2.yml  config-demo.yml  debug.yml  deploy-pages.yml  deploy.yml  multi-platform.yml  neuerworkflow.yml  pages.yml  publish-pypi.yml  release.yml  security.yml
docs/: ACTIONS.md
scripts/: generate_gallery.py
src/badge_gen/: __init__.py  cli.py
tests/: test_cli.py  test_version.py
