[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badge-gen"
version = "0.1.0"
description = "Simple badge generator used as GitHub Actions training project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Training Project" }
]

dependencies = []

[project.scripts]
badge-gen = "badge_gen.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
